--- a/public/css/master.css
+++ b/public/css/master.css
@@ -13,6 +13,11 @@ body {
     height: 100vh;
     background-color: var(--mainColor);
 }
+
+/* ENTER CHAT */
+/* ENTER CHAT */
+/* ENTER CHAT */
+
 #enter__chat {
     display: flex;
     align-content: space-between;
@@ -45,6 +50,91 @@ body {
     border: 2px solid red;
     outline: none;
 }
+
+/* USER LIST */
+/* USER LIST */
+/* USER LIST */
+
+#user__list {
+    background: var(--mainColor);
+    overflow-x: hidden;
+    overflow-y: hidden;
+    width: 280px;
+    height: calc(100vh - 128px);
+    position: fixed;
+    top: 8px;
+    left: 8px;
+    z-index: 9;
+    border-radius: 5px;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
+.user__list__class {
+    display: none;
+}
+#user__list div {
+    padding: .25rem .5rem;
+    background-color: var(--mainColor);
+    color: white;
+}
+#user__list div:first-child {
+    position: sticky;
+    top: 0px;
+    overflow: hidden;
+    padding: 0 1rem;
+    padding-top: 20px;
+}
+#user__list div:last-child {
+    overflow-y: auto;
+    max-height: calc(100% - 45px);
+}
+#user__list ul {
+    overflow-y: auto;
+    padding: 0;
+    margin: 0;
+    font-size: 24px;
+    list-style: none;
+}
+#user__list ul li::before {
+  content: "• ";
+  color: rgb(24, 207, 53);
+}
+#user__list ul li {
+    margin: 0;
+    margin-bottom: 20px;
+    border-radius: 15px;
+    color: #000;
+    background: #fff;
+    padding: 5px 15px;
+
+}
+@media (min-width: 1366px) {
+    #user__list {
+        left: calc(50vw - 680px);
+        box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.4);
+    }
+    .user__list__class {
+        display: block;
+    }
+}
+#user__list div:last-child::-webkit-scrollbar {
+    width: 10px;
+}
+#user__list div:last-child::-webkit-scrollbar-track {
+    background: rgba(20, 20, 20, .3);
+    border-radius: 5px;
+}
+#user__list div:last-child::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background: #555;
+}
+#user__list div:last-child::-webkit-scrollbar-thumb:hover {
+    background: #444;
+}
+
+/* MESSAGE BOX */
+/* MESSAGE BOX */
+/* MESSAGE BOX */
+
 #message__form {
     display: none;
     max-width: 800px;
@@ -67,26 +157,24 @@ body {
 #message__box::-webkit-scrollbar {
     width: 10px;
 }
-
-/* Track */
 #message__box::-webkit-scrollbar-track {
     background: rgba(20, 20, 20, .3);
     border-radius: 5px;
 }
-
-/* Handle */
 #message__box::-webkit-scrollbar-thumb {
     border-radius: 5px;
     background: #555;
 }
-
-/* Handle on hover */
 #message__box::-webkit-scrollbar-thumb:hover {
     background: #444;
 }
+
+/* MESSAGE BUTTONS */
+/* MESSAGE BUTTONS */
+/* MESSAGE BUTTONS */
+
 #input__buttons button:disabled {
-    background-color: #80e680;
-    border-color: #80e680;
+    background-color: #6aacd9;
 }
 #input__buttons {
     display: flex;
